Fixed color contrast in footer as suggester

--- a/style.css
+++ b/style.css
@@ -258,7 +258,7 @@
     box-sizing: border-box; 
 
 }
-
+/*text container on the home-section(index.html) and text-container-features(info.html) containing name of the app*heading styling*/
 .text-container h1,
 .text-container-features h1 {
     margin: 0 0 20px 0;
@@ -273,8 +273,8 @@
 
 /* Footer Styles */
 footer {
-    background-color: #007acc;
-    color: white;
+    background-color:rgb(0, 0, 230);
+    color: rgb(255, 255, 255);
     text-align: center;
     padding: 10px;
     width: 100%;
